create admin-owner page

--- a/src/app/admin-home/components/navpill/navpill.component.html
+++ b/src/app/admin-home/components/navpill/navpill.component.html
@@ -15,4 +15,7 @@
   <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link" routerLink="/admin/towns" >{{'ADMIN_TOWNS' | translate}}</a>
   </li>
+  <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+    <a class="nav-link" routerLink="/admin/owner" >{{'ADMIN_OWNER' | translate}}</a>
+  </li>
 </ul>
