--- a/src/app/admin-home/components/navpill/navpill.component.html
+++ b/src/app/admin-home/components/navpill/navpill.component.html
@@ -7,7 +7,7 @@
     <a class="nav-link"    routerLink="/admin/add-lang" >{{'ADMIN_LANGUAGE' | translate}}</a>
   </li>
   <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-    <a class="nav-link" routerLink="/admin/properties" >{{'ADMIN_REFDATA' | translate}}</a>
+    <a class="nav-link" routerLink="/admin/refdata" >{{'ADMIN_REFDATA' | translate}}</a>
   </li>
   <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link" routerLink="/admin/propertyNews" >{{'ADMIN_NEWS' | translate}}</a>
@@ -17,5 +17,8 @@
   </li>
   <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link" routerLink="/admin/owner" >{{'ADMIN_OWNER' | translate}}</a>
+  </li>
+  <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+    <a class="nav-link" routerLink="/admin/properties" >{{'ADMIN_PROPERTIES' | translate}}</a>
   </li>
 </ul>
