creating properties validation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+{{evironmentName}}
 <div [ngClass]="{'right-to-left': (isRightToLeft$ | async)}">
   <app-bs-navbar></app-bs-navbar>
   <div class="main_content">
