--- a/src/app/admin-home/components/properties/view-property/view-property.component.html
+++ b/src/app/admin-home/components/properties/view-property/view-property.component.html
@@ -5,18 +5,18 @@
             <div class="row">
                 <div class="col-md-6">
                     <div [ngClass]="{'editState':editState.data}">
-                        <form *ngIf="Data._id" #f1="ngForm" (ngSubmit)="onSubmit('data')">
+                        <form *ngIf="Data._id" #o="ngForm" (ngSubmit)="onSubmit('data')">
                             <ul class="list-group">
                                 <li class="list-group-item  panel-heading">
                                     <div class="row">
                                         <div class="col-md-12">
                                             <h5><i></i>Data</h5>
                                             <a class="glyphicon glyphicon-pencil btn btn-primary pull-right"
-                                                (click)="editState.data = !editState.data"></a>
+                                                (click)="editState.data = !editState.data; oForm = false"></a>
                                         </div>
                                     </div>
                                 </li>
-                                 <li class="list-group-item"><label>Owner Id</label>
+                                  <li class="list-group-item"><label>Owner Id</label>
                                     <span class="readContent">{{Data.ownerId}}</span>
                                      <input disabled  type="text" class="form-control" name="ownerId" [(ngModel)]="Data.ownerId"/>
                                 </li>
@@ -26,7 +26,7 @@
                                 </li>
                                 <li class="list-group-item"><label>Price</label>
                                     <span class="readContent">{{Data.price}}</span>
-                                    <input required type="number" class="form-control" name="price" [(ngModel)]="Data.price" [ngModelOptions]="{updateOn:'submit'}"/>
+                                    <input required type="number"  class="form-control" name="price" [(ngModel)]="Data.price" (change)="changeStatus('o')" [ngModelOptions]="{updateOn:'submit'}"/>
                                 </li>
                                 
                                     <ng-container *ngIf="type == 'Rent'">
@@ -34,20 +34,20 @@
                                     <span style='font-size: 25px'
                                         [ngClass]="{'glyphicon-ok-circle' : Data.furnished, 'glyphicon-remove-circle':!Data.furnished }"
                                         class='glyphicon readContent'></span>
-                                    <mat-checkbox class="example-margin" name="furnished" [(ngModel)]="Data.furnished" [ngModelOptions]="{updateOn:'submit'}"></mat-checkbox>
+                                    <mat-checkbox class="example-margin" (change)="changeStatus('o')" name="furnished" [(ngModel)]="Data.furnished" [ngModelOptions]="{updateOn:'submit'}"></mat-checkbox>
                                 </li>
                                 <li class="list-group-item"><label>sharedAccommodation</label>
                                     <span style='font-size: 25px'
                                         [ngClass]="{'glyphicon-ok-circle' : Data.sharedAccommodation, 'glyphicon-remove-circle':!Data.sharedAccommodation }"
                                         class='glyphicon readContent'></span>
-                                    <mat-checkbox class="example-margin" name="sharedAccommodation" [(ngModel)]="Data.sharedAccommodation" [ngModelOptions]="{updateOn:'submit'}"></mat-checkbox>
+                                    <mat-checkbox class="example-margin" (change)="changeStatus('o')" name="sharedAccommodation" [(ngModel)]="Data.sharedAccommodation" [ngModelOptions]="{updateOn:'submit'}"></mat-checkbox>
                                 </li> 
                                 </ng-container>
                                 <li class="list-group-item editBtns">
                                     <div class="row">
                                         <div class="col-md-12">
-                                            <button (click)="editState.data = !editState.data" class="btn btn-default pull-left">Cancel</button>
-                                            <button type="submit" class="btn btn-primary pull-right">Save</button>
+                                            <button (click)="editState.data = !editState.data; oForm = false" class="btn btn-default pull-left">Cancel</button>
+                                            <button [disabled]="!oForm" type="submit" class="btn btn-primary pull-right">Save</button>
                                         </div>
                                     </div>
                                 </li>
@@ -64,54 +64,54 @@
                                     <div class="col-md-12">
                                         <h5><i></i>Property</h5>
                                         <a type="button" class="glyphicon glyphicon-pencil btn btn-primary pull-right"
-                                            (click)="editState.property = !editState.property"></a>
+                                            (click)="editState.property = !editState.property; f1Form = false"></a>
                                     </div>
                                 </div>
                             </li>
                             <li class="list-group-item"><label>Address Line 1</label>
                                 <span class="readContent">{{property.addressLine1}}</span>
-                                <input type="text" class="form-control" name="addressLine1" [(ngModel)]="property.addressLine1" [ngModelOptions]="{updateOn:'submit'}" />
+                                <input type="text" (change)="changeStatus('f1')" class="form-control" name="addressLine1" [(ngModel)]="property.addressLine1" [ngModelOptions]="{updateOn:'submit'}" />
                             </li>
                             <li class="list-group-item"><label>Address Line 1</label>
                                 <span class="readContent">{{property.addressLine2}}</span>
-                                <input type="text" class="form-control" name="addressLine2" [(ngModel)]="property.addressLine2" [ngModelOptions]="{updateOn:'submit'}" />
+                                <input type="text" (change)="changeStatus('f1')" class="form-control" name="addressLine2" [(ngModel)]="property.addressLine2" [ngModelOptions]="{updateOn:'submit'}" />
                             </li>
                             <li class="list-group-item"><label>Area</label>
                                 <span class="readContent">{{property.area}}</span>
-                                <input required type="number" class="form-control" name="area" [(ngModel)]="property.area" [ngModelOptions]="{updateOn:'submit'}" />
+                                <input required (change)="changeStatus('f1')" type="number" class="form-control" name="area" [(ngModel)]="property.area" [ngModelOptions]="{updateOn:'submit'}" />
                             </li>
                             <li class="list-group-item"><label>Bedrooms</label>
                                 <span class="readContent">{{property.bedrooms}}</span>
-                                <input required type="number" class="form-control" name="bedrooms" [(ngModel)]="property.bedrooms" [ngModelOptions]="{updateOn:'submit'}" />
+                                <input required (change)="changeStatus('f1')" type="number" class="form-control" name="bedrooms" [(ngModel)]="property.bedrooms" [ngModelOptions]="{updateOn:'submit'}" />
                             </li>
                             <li class="list-group-item"><label>Bathrooms</label>
                                 <span class="readContent">{{property.bathrooms}}</span>
-                                <input required type="number" class="form-control" name="bathrooms" [(ngModel)]="property.bathrooms" [ngModelOptions]="{updateOn:'submit'}" />
+                                <input required (change)="changeStatus('f1')" type="number" class="form-control" name="bathrooms" [(ngModel)]="property.bathrooms" [ngModelOptions]="{updateOn:'submit'}" />
                             </li>
                             <li class="list-group-item"><label>kitchen</label>
                                 <span class="readContent">{{property.kitchen}}</span>
-                                <input required type="number" class="form-control" name="kitchen" [(ngModel)]="property.kitchen" [ngModelOptions]="{updateOn:'submit'}" />
+                                <input required (change)="changeStatus('f1')" type="number" class="form-control" name="kitchen" [(ngModel)]="property.kitchen" [ngModelOptions]="{updateOn:'submit'}" />
                             </li>
                             <li class="list-group-item"><label>livingRoom</label>
                                 <span class="readContent">{{property.livingRoom}}</span>
-                                <input required type="number" class="form-control" name="livingRoom" [(ngModel)]="property.livingRoom" [ngModelOptions]="{updateOn:'submit'}" />
+                                <input required (change)="changeStatus('f1')" type="number" class="form-control" name="livingRoom" [(ngModel)]="property.livingRoom" [ngModelOptions]="{updateOn:'submit'}" />
                             </li>
                             <li class="list-group-item"><label>receptionRooms</label>
                                 <span class="readContent">{{property.receptionRooms}}</span>
-                                <input required type="number"  class="form-control" name="receptionRooms" [(ngModel)]="property.receptionRooms" [ngModelOptions]="{updateOn:'submit'}" />
+                                <input required (change)="changeStatus('f1')" type="number"  class="form-control" name="receptionRooms" [(ngModel)]="property.receptionRooms" [ngModelOptions]="{updateOn:'submit'}" />
                             </li>
                             <li class="list-group-item"><label>Archived</label>
                                 <span style='font-size: 25px'
                                     [ngClass]="{'glyphicon-ok-circle' : property.archived, 'glyphicon-remove-circle':!property.archived }"
                                     class='glyphicon readContent'></span>
-                                <mat-checkbox class="example-margin" name="property" [(ngModel)]="property.archived" [ngModelOptions]="{updateOn:'submit'}"></mat-checkbox>
+                                <mat-checkbox class="example-margin" name="property" (change)="changeStatus('f1')" [(ngModel)]="property.archived" [ngModelOptions]="{updateOn:'submit'}"></mat-checkbox>
                             </li>
                             <li class="list-group-item editBtns">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <button (click)="editState.property = !editState.property"
+                                        <button (click)="editState.property = !editState.property; f1Form= false"
                                             class="btn btn-default pull-left">Cancel</button>
-                                        <button type="submit" class="btn btn-primary pull-right">Save</button>
+                                        <button [disabled]="!f1Form" type="submit" class="btn btn-primary pull-right">Save</button>
                                     </div>
                                 </div>
                             </li>
