--- a/src/app/admin-home/components/refdata/admin-properties/admin-properties.component.html
+++ b/src/app/admin-home/components/refdata/admin-properties/admin-properties.component.html
@@ -5,9 +5,9 @@
     <form [formGroup]="searchFormGroup" (ngSubmit)="onPageChange('value')">
         <div class="well">
                 <div class="row">
-                    <div class="col-md-3 form-group">
+                    <!-- <div class="col-md-3 form-group">
                         <label>{{'ID' | translate}}</label> <input class="form-control" type="text" name="id" formControlName='_id'>
-                    </div>
+                    </div> -->
                     <div class="col-md-3 form-group">
                         <label>{{'COUNTRY' | translate}}</label> <input class="form-control" type="text" name="county" formControlName='country'>
                     </div>
