--- a/src/app/admin-home/components/users/admin-users/admin.component.html
+++ b/src/app/admin-home/components/users/admin-users/admin.component.html
@@ -8,10 +8,10 @@
                         <label>{{'NAME' | translate}}</label>
                         <input type="text" class="form-control" formControlName='name'>
                     </div>
-                    <div class="col-md-3 form-group">
+                    <!-- <div class="col-md-3 form-group">
                         <label>{{'USER_ID' | translate}}</label>
                         <input type="text" class="form-control" formControlName='_id'>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="row">
                     <div class="col-md-12">
