--- a/src/app/admin-home/components/owner/owner.component.html
+++ b/src/app/admin-home/components/owner/owner.component.html
@@ -5,8 +5,8 @@
             <div class="well">
                 <div class="row">
                     <div class="col-md-3 form-group">
-                        <label>{{'_id' | translate}}</label>
-                        <input type="text" class="form-control" formControlName='_id'>
+                        <label>{{'NAME' | translate}}</label>
+                        <input type="text" class="form-control" formControlName='name'>
                     </div>
                 </div>
                 <div class="row">
