--- a/src/app/admin-home/components/owner/owner.component.html
+++ b/src/app/admin-home/components/owner/owner.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-body">
-        <h3>{{'MANAGE_OWNERS' | translate}}</h3>
+        <h3>{{'MANAGE_AGENTS' | translate}}</h3>
         <form [formGroup]="searchFormGroup" (ngSubmit)="onPageChange('search')">
             <div class="well">
                 <div class="row">
