--- a/src/app/admin-home/components/navpill/navpill.component.html
+++ b/src/app/admin-home/components/navpill/navpill.component.html
@@ -16,7 +16,7 @@
     <a class="nav-link" routerLink="/admin/towns" >{{'ADMIN_TOWNS' | translate}}</a>
   </li>
   <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-    <a class="nav-link" routerLink="/admin/owner" >{{'ADMIN_OWNER' | translate}}</a>
+    <a class="nav-link" routerLink="/admin/owner" >{{'ADMIN_AGENTS' | translate}}</a>
   </li>
   <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link" routerLink="/admin/properties" >{{'ADMIN_PROPERTIES' | translate}}</a>
