--- a/src/app/admin-home/components/properties/view-property/view-property.component.html
+++ b/src/app/admin-home/components/properties/view-property/view-property.component.html
@@ -80,6 +80,15 @@
                                     <mat-checkbox class="example-margin" (change)="changeStatus('o')" name="sharedAccommodation" [(ngModel)]="Data.sharedAccommodation" [ngModelOptions]="{updateOn:'submit'}"></mat-checkbox>
                                 </li> 
                                 </ng-container>
+                                <ng-container *ngIf="type =='Sale'">
+                                    <li class="list-group-item"><label>Property off-plan</label>
+                                        <span style='font-size: 25px'
+                                            [ngClass]="{'glyphicon-ok-circle' : Data.propertyOffPlan, 'glyphicon-remove-circle':!Data.propertyOffPlan }"
+                                            class='glyphicon readContent'></span>
+                                        <mat-checkbox class="example-margin" (change)="changeStatus('o')" name="propertyOffPlan" [(ngModel)]="Data.propertyOffPlan" [ngModelOptions]="{updateOn:'submit'}"></mat-checkbox>
+                                    </li> 
+    
+                                </ng-container>
                                 <li class="list-group-item editBtns">
                                     <div class="row">
                                         <div class="col-md-12">
@@ -139,16 +148,24 @@
                                 <span class="readContent">{{property.receptionRooms}}</span>
                                 <input required (change)="changeStatus('f1')" type="number"  class="form-control" name="receptionRooms" [(ngModel)]="property.receptionRooms" [ngModelOptions]="{updateOn:'submit'}" />
                             </li>
-                            <li class="list-group-item"><label>Archived</label>
+                            <li class="list-group-item"><label>Property Type</label>
+                                <span *ngIf="!editState.property" class="readContent">{{property.propertyType}}</span>
+                                    <select (change)="changeStatus('f1')" [(ngModel)]="property.propertyType" [ngModelOptions]="{updateOn:'submit'}" [ngModelOptions]="{standalone: true}">
+                                        <option value="HOUSE" [selected]="property.propertyType === 'HOUSE'">House</option>
+                                        <option value="APARTMENT" [selected]="property.propertyType === 'APARTMENT'">Apartment</option>
+                                        <option value="LAND" [selected]="property.propertyType === 'LAND'">Land</option>
+                                      </select>
+                            </li>
+                            <li class="list-group-item"><label>published</label>
                                 <span style='font-size: 25px'
-                                    [ngClass]="{'glyphicon-ok-circle' : property.archived, 'glyphicon-remove-circle':!property.archived }"
+                                    [ngClass]="{'glyphicon-ok-circle' : property.published, 'glyphicon-remove-circle':!property.published }"
                                     class='glyphicon readContent'></span>
-                                <mat-checkbox class="example-margin" name="property" (change)="changeStatus('f1')" [(ngModel)]="property.archived" [ngModelOptions]="{updateOn:'submit'}"></mat-checkbox>
+                                <mat-checkbox class="example-margin" name="property" (change)="changeStatus('f1')" [(ngModel)]="property.published" [ngModelOptions]="{updateOn:'submit'}"></mat-checkbox>
                             </li>
                             <li class="list-group-item editBtns">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <button (click)="editState.property = !editState.property; f1Form= false"
+                                        <button (click)="onCancel('f1');editState.property = !editState.property; f1Form= false;"
                                             class="btn btn-default pull-left">Cancel</button>
                                         <button [disabled]="!f1Form" type="submit" class="btn btn-primary pull-right">Save</button>
                                     </div>
@@ -156,7 +173,41 @@
                             </li>
                         </ul>
                     </form>
-                </div>            
+                </div> 
+                <div class="col-md-6">
+                    <form *ngIf="!!property._id" #f2="ngForm" (ngSubmit)="onSubmit('property')"
+                        [ngClass]="{'editState':editState.property}">
+                        <ul class="list-group">
+                            <li class="list-group-item  panel-heading">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <h5><i></i>Post info in: </h5>
+                                            <select (change)="clickLang()" name="selectedPostLang" [(ngModel)]="selectedPostLang">
+                                                <option *ngFor="let lang of (languages$ | async)" [selected]="lang === selectedPostLang" [ngValue]="lang">{{lang}}</option>
+                                            </select>
+                                        <h5><i></i>Description</h5>
+                                        <a type="button" class="glyphicon glyphicon-pencil btn btn-primary pull-right"
+                                            (click)="editState.property = !editState.property; f1Form = false"></a>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="list-group-item"><label>Address Line 1</label>
+                                <span class="readContent">{{property.addressLine1}}</span>
+                                <textarea required  style = "height:700px" class="input" class="form-control" name="text" [(ngModel)]="property.description.en" required></textarea>
+                                <input type="text" (change)="changeStatus('f1')" class="form-control" name="addressLine1" [(ngModel)]="property.addressLine1" [ngModelOptions]="{updateOn:'submit'}" />
+                            </li>
+                            <li class="list-group-item editBtns">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <button (click)="onCancel('f1');editState.property = !editState.property; f1Form= false;"class="btn btn-default pull-left">Cancel</button>
+                                        <button [disabled]="!f1Form" type="submit" class="btn btn-primary pull-right">Save</button>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </form>
+                </div> 
+                           
             </div>
             
         <div class="row">
